[gd_scene load_steps=9 format=3 uid="uid://yq68ehodnput"]

[ext_resource type="Script" path="res://scenes/packages/scripts/packages.gd" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0aopp"]
bg_color = Color(0.301961, 0.301961, 0.301961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sb28g"]
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.384314)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gtfl1"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k1uj"]
bg_color = Color(0.827451, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3i8xk"]
bg_color = Color(0.913725, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wdarj"]
bg_color = Color(0.745098, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3endx"]
draw_center = false

[node name="packages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3")

[node name="bg" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0aopp")

[node name="back" type="Button" parent="bg"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 70.0
offset_bottom = 35.0
text = "Back
"

[node name="points" type="Label" parent="bg"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = 15.0
offset_right = -33.0
offset_bottom = 29.0
text = "320 Pt"

[node name="scrollWrapper" type="ScrollContainer" parent="bg"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 55.0
offset_top = 50.0
offset_right = -69.0
offset_bottom = -50.0

[node name="packageHolder" type="GridContainer" parent="bg/scrollWrapper"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="resultWindow" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_sb28g")

[node name="package" type="TextureRect" parent="resultWindow"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 46.0
offset_top = -174.0
offset_right = 221.0
offset_bottom = 176.0
grow_horizontal = 0
grow_vertical = 2
expand_mode = 5

[node name="cardWindow" type="Panel" parent="resultWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 580.0
offset_top = 300.0
offset_right = -572.0
offset_bottom = -343.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gtfl1")

[node name="close" type="Button" parent="resultWindow/cardWindow"]
visible = false
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -13.9999
offset_top = -10.0
offset_right = 11.0001
offset_bottom = 15.0
theme_override_styles/normal = SubResource("StyleBoxFlat_8k1uj")
theme_override_styles/hover = SubResource("StyleBoxFlat_3i8xk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_wdarj")
theme_override_styles/focus = SubResource("StyleBoxFlat_3endx")
text = "X"

[node name="scrollWrapper" type="ScrollContainer" parent="resultWindow/cardWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = 11.0
offset_right = -16.5999
offset_bottom = -9.40002
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="resultWindow/cardWindow/scrollWrapper"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="cardHolder" type="GridContainer" parent="resultWindow/cardWindow/scrollWrapper/CenterContainer"]
layout_mode = 2
columns = 5

[connection signal="pressed" from="bg/back" to="." method="_on_back_pressed"]
[connection signal="resized" from="bg/scrollWrapper" to="." method="_on_scrollWrapper_resized"]
[connection signal="pressed" from="resultWindow/cardWindow/close" to="." method="_on_close_pressed"]
